--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <title>BioTucun</title>
 </head>
 <body>
@@ -27,5 +30,30 @@
             <a class="button-CTA" href="#">CONHEÇA NOSSA SOLUÇÃO SUSTENTÁVEL</a>
         </section>
     </header>
+
+    <section class="container-sobre">
+            <img src="img/Fruto_Tucuma-removebg.png" alt="Fruto Tucuma">
+            <p><span>Isabela Kristina</span> apresenta a <span class="biotucunlogo-sobre">BIOTUCUN</span>, uma iniciativa que surge com o propósito de transformar os resíduos do tucumã em um produto inovador, viável e indispensável para a cadeia cosmética.
+            <br>
+            Atualmente, os resíduos do tucumã — comumente encontrados em feiras e comércios — são subaproveitados ou simplesmente descartados, o que representa desperdício de matéria-prima e contribui para o acúmulo de lixo em lixões e aterros sanitários.
+            </p>
+    </section>
+    <section class="container-sobre2">
+        <p>Nos últimos cinco anos, a produção do fruto tem sofrido oscilações devido a fatores climáticos, como a seca. Em contrapartida, o consumo em Manaus apresentou um crescimento médio de 22% ao ano, aumentando tanto o valor de mercado quanto o volume de resíduos gerados. Considerar esses resíduos como fonte de valor é uma proposta inovadora, especialmente porque, embora o tucumã tenha seu potencial reconhecido nas indústrias cosmética e alimentícia, suas sobras ainda são usadas apenas como ração, adubo (casca) ou material artesanal (amêndoa) — apesar de estudos apontarem seu uso como biocombustível.
+        </p> 
+        <div class="graficoanimado">
+        <div class="bars-container">
+            <div class="bar bar-1"></div>
+            <div class="bar bar-2"></div>
+            <div class="bar bar-3"></div>
+            <div class="bar4">
+                <p>+22%</p>
+                <div class="bar bar-4"></div>
+            </div>
+        </div>
+    </div>
+    </section>
+  <script src="script.js"></script>
 </body>
+
 </html>
