--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
     </section>
     <section class="container-sobre2">
-        <p>Nos últimos cinco anos, a produção do fruto tem sofrido oscilações devido a fatores climáticos, como a seca. Em contrapartida, o consumo em Manaus apresentou um crescimento médio de 22% ao ano, aumentando tanto o valor de mercado quanto o volume de resíduos gerados. Considerar esses resíduos como fonte de valor é uma proposta inovadora, especialmente porque, embora o tucumã tenha seu potencial reconhecido nas indústrias cosmética e alimentícia, suas sobras ainda são usadas apenas como ração, adubo (casca) ou material artesanal (amêndoa) — apesar de estudos apontarem seu uso como biocombustível.
+        <p>Nos últimos cinco anos, a produção do fruto tem sofrido oscilações devido a <span>fatores climáticos</span>, como a seca. Em contrapartida, o <span>consumo</span> em Manaus apresentou um crescimento médio de <span>22% ao ano</span>, aumentando tanto o valor de mercado quanto o volume de resíduos gerados. Considerar esses resíduos como fonte de valor é uma <span>proposta inovadora</span>, especialmente porque, embora o tucumã tenha seu potencial reconhecido nas indústrias cosmética e alimentícia, suas sobras ainda são usadas apenas como ração, adubo (casca) ou material artesanal (amêndoa) — apesar de estudos apontarem seu uso como <span>biocombustível</span>.
         </p> 
         <div class="graficoanimado">
         <div class="bars-container">
@@ -52,6 +52,10 @@
             </div>
         </div>
     </div>
+
+    <p>A <span class="biotucunlogo-sobre">BIOTUCUN</span>, dentro de suas atuais limitações laboratoriais e industriais, já realizou testes com os resíduos da casca do tucumã, <span>comprovando seu potencial</span> como esferas esfoliantes para cosméticos. Essa matéria-prima ainda passará por novas análises para identificar seus bioativos, com o objetivo de agregar valor terapêutico ao produto final. Futuramente, também serão estudadas a amêndoa e a semente do fruto.
+
+    Após a finalização dos testes, o produto será direcionado a indústrias cosméticas, lojas de matérias-primas e farmácias de manipulação. A proposta da Biotucun é <span>gerar valor a partir de resíduos</span>, contribuir para a preservação da floresta em pé, reduzir impactos ambientais e fortalecer a economia local, com perspectivas de expansão para o mercado nacional.</p>
     </section>
   <script src="script.js"></script>
 </body>
