--- a/index.html
+++ b/index.html
@@ -60,4 +60,21 @@
   <script src="script.js"></script>
 </body>
 
+<section class="objetivos">
+    <div class="container-objetivos">
+            <div class="container missao">
+                <img src="img/targetverde.png" alt="targetverde">
+                <h2>MISSÃO</h2>
+            </div>
+            <div class="container visão">
+                <h2>VISÃO</h2>
+            </div>
+            <div class="container valores">
+                <h2>VALORES</h2>
+            </div>
+
+            </p>
+        </div>
+
+</section>
 </html>
