--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
                 <img src="img/targetverde.png" alt="targetverde">
                 <h2>MISSÃO</h2>
             </div>
-            <div class="container visão">
+            <div class="container visao">
+                <img src="img/folhaverde.png" alt="">
                 <h2>VISÃO</h2>
             </div>
             <div class="container valores">
+                <img src="img/valoresverde.png" alt="">
                 <h2>VALORES</h2>
             </div>
 
