--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
         <div class="containerheader">
             <img class="headerlogo" src="img/Biotucun logo v2.png" alt="biotucunlogo">
             <nav>
-                <ul><a href="#">Quem somos?</a></ul>
-                <ul><a href="#">Missão</a></ul>
-                <ul><a href="#">Visão</a></ul>
-                <ul><a href="#">Valores</a></ul>
-                <ul><a href="#"></a></ul>
+                <ul><a href="#sobre">Quem somos?</a></ul>
+                <ul><a href="#objetivos">Objetivos</a></ul>
+                <ul><a href="#">Contato</a></ul>
             </nav>
         </div>
         <section class="containerhome">
@@ -27,18 +25,18 @@
                 <h1>TRANSFORMANDO A <span>BIODIVERSIDADE</span> AMAZÔNICA EM <span>INOVAÇÃO</span> SUSTENTÁVEL
                 </h1>
             </div> 
-            <a class="button-CTA" href="#">CONHEÇA NOSSA SOLUÇÃO SUSTENTÁVEL</a>
+            <a class="button-CTA" href="#sobre2">CONHEÇA NOSSA SOLUÇÃO SUSTENTÁVEL</a>
         </section>
     </header>
 
-    <section class="container-sobre">
+    <section id="sobre" class="container-sobre">
             <img src="img/Fruto_Tucuma-removebg.png" alt="Fruto Tucuma">
             <p><span>Isabela Kristina</span> apresenta a <span class="biotucunlogo-sobre">BIOTUCUN</span>, uma iniciativa que surge com o propósito de transformar os resíduos do tucumã em um produto inovador, viável e indispensável para a cadeia cosmética.
             <br>
             Atualmente, os resíduos do tucumã — comumente encontrados em feiras e comércios — são subaproveitados ou simplesmente descartados, o que representa desperdício de matéria-prima e contribui para o acúmulo de lixo em lixões e aterros sanitários.
             </p>
     </section>
-    <section class="container-sobre2">
+    <section id="sobre2" class="container-sobre2">
         <p>Nos últimos cinco anos, a produção do fruto tem sofrido oscilações devido a <span>fatores climáticos</span>, como a seca. Em contrapartida, o <span>consumo</span> em Manaus apresentou um crescimento médio de <span>22% ao ano</span>, aumentando tanto o valor de mercado quanto o volume de resíduos gerados. Considerar esses resíduos como fonte de valor é uma <span>proposta inovadora</span>, especialmente porque, embora o tucumã tenha seu potencial reconhecido nas indústrias cosmética e alimentícia, suas sobras ainda são usadas apenas como ração, adubo (casca) ou material artesanal (amêndoa) — apesar de estudos apontarem seu uso como <span>biocombustível</span>.
         </p> 
         <div class="graficoanimado">
@@ -60,19 +58,23 @@
   <script src="script.js"></script>
 </body>
 
-<section class="objetivos">
+<section id="objetivos" class="objetivos">
     <div class="container-objetivos">
             <div class="container missao">
                 <img src="img/targetverde.png" alt="targetverde">
-                <h2>MISSÃO</h2>
+                <h2>MISSÃO</h2> 
+                <p class="txtmissao">Aproveitar resíduos da biodiversidade amazônica para desenvolver insumos sustentáveis e inovadores, agregando valor às cadeias produtivas e promovendo impacto ambiental, social e econômico positivo.</p>
             </div>
             <div class="container visao">
                 <img src="img/folhaverde.png" alt="">
+                
                 <h2>VISÃO</h2>
+                <p class="txtvisao">Ser uma referência em bioinovação na Amazônia, liderando o desenvolvimento de soluções sustentáveis a partir de resíduos e contribuindo para a conservação da floresta em pé e o fortalecimento da bioeconomia. Buscamos transformar a percepção de valor sobre os subprodutos naturais amazônicos, criando cadeias produtivas circulares que beneficiem comunidades locais e o mercado consumidor, unindo saberes tradicionais e ciência para gerar prosperidade econômica com preservação ambiental.</p>
             </div>
             <div class="container valores">
                 <img src="img/valoresverde.png" alt="">
                 <h2>VALORES</h2>
+                 <p class="txtvalores">Comprometemo-nos com a sustentabilidade e o uso consciente dos recursos naturais, buscando inovação que transforma resíduos em valor real. Respeitamos e exaltamos a riqueza amazônica, conduzindo nossas ações com ética e transparência. Geramos oportunidades para comunidades locais, fortalecendo economias regionais, sempre com base em pesquisa científica e excelência técnica.<p>
             </div>
 
             </p>
