--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
             <nav>
                 <ul><a href="#sobre">Quem somos?</a></ul>
                 <ul><a href="#objetivos">Objetivos</a></ul>
-                <ul><a href="#">Contato</a></ul>
+                <ul><a href="#footer">Contato</a></ul>
             </nav>
         </div>
         <section class="containerhome">
-            <div class="containerhome-txt">
+            <div class="containerhome-txt" data-aos="fade-right" data-aos-delay="400"> 
                 <h1>TRANSFORMANDO A <span>BIODIVERSIDADE</span> AMAZÔNICA EM <span>INOVAÇÃO</span> SUSTENTÁVEL
                 </h1>
             </div> 
-            <a class="button-CTA" href="#sobre2">CONHEÇA NOSSA SOLUÇÃO SUSTENTÁVEL</a>
+            <a class="button-CTA" data-aos="fade-right" data-aos-delay="500" href="#sobre2">CONHEÇA NOSSA SOLUÇÃO SUSTENTÁVEL</a>
         </section>
     </header>
 
     <section id="sobre" class="container-sobre">
-            <img src="img/Fruto_Tucuma-removebg.png" alt="Fruto Tucuma">
-            <p><span>Isabela Kristina</span> apresenta a <span class="biotucunlogo-sobre">BIOTUCUN</span>, uma iniciativa que surge com o propósito de transformar os resíduos do tucumã em um produto inovador, viável e indispensável para a cadeia cosmética.
+            <img src="img/Fruto_Tucuma-removebg.png" alt="Fruto Tucuma" data-aos="fade-right" data-aos-delay="500">
+            <p data-aos="fade-left" data-aos-delay="400"><span>Isabela Kristina</span> apresenta a <span class="biotucunlogo-sobre" >BIOTUCUN</span>, uma iniciativa que surge com o propósito de transformar os resíduos do tucumã em um produto inovador, viável e indispensável para a cadeia cosmética.
             <br>
             Atualmente, os resíduos do tucumã — comumente encontrados em feiras e comércios — são subaproveitados ou simplesmente descartados, o que representa desperdício de matéria-prima e contribui para o acúmulo de lixo em lixões e aterros sanitários.
             </p>
     </section>
-    <section id="sobre2" class="container-sobre2">
+    <section id="sobre2" class="container-sobre2" data-aos="fade-right" data-aos-delay="500">
         <p>Nos últimos cinco anos, a produção do fruto tem sofrido oscilações devido a <span>fatores climáticos</span>, como a seca. Em contrapartida, o <span>consumo</span> em Manaus apresentou um crescimento médio de <span>22% ao ano</span>, aumentando tanto o valor de mercado quanto o volume de resíduos gerados. Considerar esses resíduos como fonte de valor é uma <span>proposta inovadora</span>, especialmente porque, embora o tucumã tenha seu potencial reconhecido nas indústrias cosmética e alimentícia, suas sobras ainda são usadas apenas como ração, adubo (casca) ou material artesanal (amêndoa) — apesar de estudos apontarem seu uso como <span>biocombustível</span>.
         </p> 
         <div class="graficoanimado">
@@ -55,8 +55,7 @@
 
     Após a finalização dos testes, o produto será direcionado a indústrias cosméticas, lojas de matérias-primas e farmácias de manipulação. A proposta da Biotucun é <span>gerar valor a partir de resíduos</span>, contribuir para a preservação da floresta em pé, reduzir impactos ambientais e fortalecer a economia local, com perspectivas de expansão para o mercado nacional.</p>
     </section>
-  <script src="script.js"></script>
-</body>
+  
 
 <section id="objetivos" class="objetivos">
     <div class="container-objetivos">
@@ -71,7 +70,7 @@
                 <h2>VISÃO</h2>
                 <p class="txtvisao">Ser uma referência em bioinovação na Amazônia, liderando o desenvolvimento de soluções sustentáveis a partir de resíduos e contribuindo para a conservação da floresta em pé e o fortalecimento da bioeconomia. Buscamos transformar a percepção de valor sobre os subprodutos naturais amazônicos, criando cadeias produtivas circulares que beneficiem comunidades locais e o mercado consumidor, unindo saberes tradicionais e ciência para gerar prosperidade econômica com preservação ambiental.</p>
             </div>
-            <div class="container valores">
+            <div class="container valores" >
                 <img src="img/valoresverde.png" alt="">
                 <h2>VALORES</h2>
                  <p class="txtvalores">Comprometemo-nos com a sustentabilidade e o uso consciente dos recursos naturais, buscando inovação que transforma resíduos em valor real. Respeitamos e exaltamos a riqueza amazônica, conduzindo nossas ações com ética e transparência. Geramos oportunidades para comunidades locais, fortalecendo economias regionais, sempre com base em pesquisa científica e excelência técnica.<p>
@@ -81,4 +80,17 @@
         </div>
 
 </section>
+<footer id="footer">
+    <div class="container-footer">
+        <div class="redes">
+            <a href="#"><img src="img/instagram.png" alt="instalogo"></a>
+            <a href=""><img src="img/facebook_.png" alt="facebooklogo"></a>
+        </div>
+        <p>TODOS OS DIREITOS RESERVADOS <br> BIOTUCUN 2025©
+        </p>
+    </div>
+
+</footer>
+<script src="script.js"></script>
+</body>
 </html>
